recursion.logo.tree.Tree.scala.error
Erreur de compilation :
Tree:3: error: not found: value step
                         case _ => {current(step) ; 
                                            ^Tree:9: error: not found: value step
                                    tree (step + 1, length *shrink , angle , shrink)
                                          ^